Fixes and tweaks

--- a/SOK.Application/Templates/Email/visit_planned.html
+++ b/SOK.Application/Templates/Email/visit_planned.html
@@ -47,7 +47,7 @@
                                             <p style="line-height: 140%;"><span
                                                     style="color: #666666; line-height: 19.6px;"><span
                                                         style="font-size: 18px; line-height: 25.2px;">Twoje zgłoszenie
-                                                        zostało zaplanowane.
+                                                        <strong>zostało zaplanowane</strong>.
                                                         Wszystkie szczegóły dostępne są w panelu
                                                         zgłoszenia.</span></span>
                                             </p>
@@ -70,8 +70,11 @@
                                             <p style="line-height: 140%;"><span
                                                     style="color: #666666; line-height: 19.6px;"><span
                                                         style="font-size: 18px; line-height: 25.2px;">Jeśli zaplanowany
-                                                        termin Ci nie odpowiada, skontaktuj się z nami:
-                                                        %parish_email%</span></span>
+                                                        termin Ci <strong>nie odpowiada</strong>, skontaktuj się z nami pod adresem
+                                                        <a rel="noopener"
+                                                           href="mailto:%parish_email%"
+                                                           target="_blank"
+                                                           style="color: #ecf0f1;"><strong>%parish_email%</strong></a>.</span></span>
                                             </p>
                                         </div>
 
