--- a/SOK.Application/Templates/Email/header.html
+++ b/SOK.Application/Templates/Email/header.html
@@ -21,89 +21,94 @@
     <title></title>
 
     <style type="text/css">
-    @media only screen and (min-width: 620px) {
-        .u-row {
-            width: 600px !important;
+    #u-body {
+        @media only screen and (min-width: 620px) {
+            .u-row {
+                width: 600px !important;
+            }
+
+            .u-row .u-col {
+                vertical-align: top;
+            }
+
+            .u-row .u-col-50 {
+                width: 300px !important;
+            }
+
+            .u-row .u-col-100 {
+                width: 600px !important;
+            }
+
         }
 
-        .u-row .u-col {
+        @media (max-width: 620px) {
+            .u-row-container {
+                max-width: 100% !important;
+                padding-left: 0px !important;
+                padding-right: 0px !important;
+            }
+
+            .u-row .u-col {
+                min-width: 320px !important;
+                max-width: 100% !important;
+                display: block !important;
+            }
+
+            .u-row {
+                width: 100% !important;
+            }
+
+            .u-col {
+                width: 100% !important;
+            }
+
+            .u-col>div {
+                margin: 0 auto;
+            }
+        }
+
+        table,
+        tr,
+        td {
             vertical-align: top;
+            border-collapse: collapse;
         }
 
-        .u-row .u-col-50 {
-            width: 300px !important;
+        p {
+            margin: 0;
         }
 
-        .u-row .u-col-100 {
-            width: 600px !important;
+        .ie-container table,
+        .mso-container table {
+            table-layout: fixed;
         }
 
-    }
-
-    @media (max-width: 620px) {
-        .u-row-container {
-            max-width: 100% !important;
-            padding-left: 0px !important;
-            padding-right: 0px !important;
+        * {
+            line-height: inherit;
         }
 
-        .u-row .u-col {
-            min-width: 320px !important;
-            max-width: 100% !important;
-            display: block !important;
+        a[x-apple-data-detectors='true'] {
+            color: inherit !important;
+            text-decoration: none !important;
         }
 
-        .u-row {
-            width: 100% !important;
+        &,
+        td {
+            color: #000000;
         }
 
-        .u-col {
-            width: 100% !important;
+        a {
+            color: #161a39;
+            text-decoration: underline;
         }
 
-        .u-col>div {
-            margin: 0 auto;
+        & {
+            margin: 0;
+            padding: 0;
+            -webkit-text-size-adjust: 100%;
+            background-color: #f9f9f9;
+            color: #000000;
         }
-    }
-
-    body {
-        margin: 0;
-        padding: 0;
-    }
-
-    table,
-    tr,
-    td {
-        vertical-align: top;
-        border-collapse: collapse;
-    }
-
-    p {
-        margin: 0;
-    }
-
-    .ie-container table,
-    .mso-container table {
-        table-layout: fixed;
-    }
-
-    * {
-        line-height: inherit;
-    }
-
-    a[x-apple-data-detectors='true'] {
-        color: inherit !important;
-        text-decoration: none !important;
-    }
-
-    table,
-    td {
-        color: #000000;
-    }
-
-    #u_body a {
-        color: #161a39;
-        text-decoration: underline;
     }
     </style>
 
@@ -116,8 +121,7 @@
 
 </head>
 
-<body class="clean-body u_body"
-    style="margin: 0;padding: 0;-webkit-text-size-adjust: 100%;background-color: #f9f9f9;color: #000000">
+<body class="u_body">
     <!--[if IE]><div class="ie-container"><![endif]-->
     <!--[if mso]><div class="mso-container"><![endif]-->
     <table id="u_body"
