Poprawka błędów mailowych

--- a/SOK.Web/Views/Shared/_SubmissionModal.cshtml
+++ b/SOK.Web/Views/Shared/_SubmissionModal.cshtml
@@ -514,7 +514,7 @@
             </div>
 
             <div class="modal-action">
-                <button v-if="emailStep === 'select' || selectedEmailType === 'visit_planned'" @@click="closeEmailModal"
+                <button v-if="emailStep === 'select'" @@click="closeEmailModal"
                     class="btn">Anuluj</button>
 
                 <template v-else>
