Poprawka widoczności maila

--- a/SOK.Application/Templates/Email/visit_planned.html
+++ b/SOK.Application/Templates/Email/visit_planned.html
@@ -74,7 +74,7 @@
                                                         <a rel="noopener"
                                                            href="mailto:%parish_email%"
                                                            target="_blank"
-                                                           style="color: #ecf0f1;"><strong>%parish_email%</strong></a>.</span></span>
+                                                           style="color: #666666;"><strong>%parish_email%</strong></a>.</span></span>
                                             </p>
                                         </div>
 
