--- a/SOK.Web/Views/Calendar/AgendaEditor.cshtml
+++ b/SOK.Web/Views/Calendar/AgendaEditor.cshtml
@@ -945,16 +945,7 @@
                     await this.updateOrder(newOrder);
                 },
                 declinateWord(count, singular, pluralFew, pluralMany) {
-                    const mod10 = count % 10;
-                    const mod100 = count % 100;
-
-                    if (mod10 === 1 && mod100 !== 11) {
-                        return singular;
-                    } else if (mod10 >= 2 && mod10 <= 4 && (mod100 < 10 || mod100 >= 20)) {
-                        return pluralFew;
-                    } else {
-                        return pluralMany;
-                    }
+                    window.declinateWord(count, singular, pluralFew, pluralMany);
                 },
                 getSubmissionDeclination(count) {
                     return this.submissionDeclination[count] || this.declinateWord(count, 'zgłoszenie', 'zgłoszenia', 'zgłoszeń');
