--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -31,14 +31,21 @@
         <partial name="_Notification" />
     </div>
     
-    <div class="flex h-full w-full justify-items-center overflow-y-hidden has-[main_.container>.card.bg-base-100]:bg-base-200">
-        <div id="sidebar" class="bg-base-300 z-20 flex w-14 flex-col gap-2 px-2 py-2 transition-[width]">
-            <partial name="_Sidebar" />
+    <div class="drawer lg:drawer-open">
+        <input id="sidebar-drawer" type="checkbox" class="drawer-toggle" />
+        
+        <div class="drawer-content flex flex-col has-[main_.container>.card.bg-base-100]:bg-base-200">
+            <main role="main" class="container mx-auto min-h-full overflow-y-scroll px-2.5 pt-16 pb-16">
+                @RenderBody()
+            </main>
         </div>
-
-        <main role="main" class="container mx-auto min-h-full overflow-y-scroll px-2.5 pt-16 pb-16">
-            @RenderBody()
-        </main>
+        
+        <div class="drawer-side is-drawer-close:overflow-visible z-20">
+            <label for="sidebar-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+            <div class="bg-base-300 flex h-full is-drawer-close:w-16 is-drawer-open:w-64 z-20 flex-col gap-2 p-2">
+                <partial name="_Sidebar" />
+            </div>
+        </div>
     </div>
 
     <footer class="footer footer-center bg-base-300 text-base-content fixed bottom-0 left-0 z-10 p-4 sm:footer-horizontal">
