--- a/SOK.Web/Views/Shared/_Sidebar.cshtml
+++ b/SOK.Web/Views/Shared/_Sidebar.cshtml
@@ -87,6 +87,7 @@
 			Icon = "gear",
 			Active = activePage == "Settings",
 			OffsetSection = true,
+			RequiredRoles = new[] { Role.Administrator }
 		},
 	};
 }
