--- a/SOK.Web/Views/Shared/_Layout.cshtml
+++ b/SOK.Web/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <div class="drawer lg:drawer-open">
         <input id="sidebar-drawer" type="checkbox" class="drawer-toggle" />
         
-        <div class="drawer-content flex flex-col has-[main_.container>.card.bg-base-100]:bg-base-200">
+        <div class="drawer-content flex flex-col h-screen w-full overflow-y-hidden has-[main_.container>.card.bg-base-100]:bg-base-200">
             <main role="main" class="container mx-auto min-h-full overflow-y-scroll px-2.5 pt-16 pb-16">
                 @RenderBody()
             </main>
